--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^2.0.4"
+	},
+	"dependencies": {
+		"lucide-svelte": "^0.454.0"
 	}
 }
