--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/eslint": "^9.6.0",
 		"autoprefixer": "^10.4.20",
+		"bits-ui": "^1.0.0-next.46",
 		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -44,6 +45,7 @@
 	},
 	"dependencies": {
 		"@sentry/browser": "^8.37.1",
-		"lucide-svelte": "^0.454.0"
+		"lucide-svelte": "^0.454.0",
+		"mode-watcher": "^0.4.1"
 	}
 }
