--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"formsnap": "^2.0.0-next.1",
 		"globals": "^15.0.0",
+		"paneforge": "^1.0.0-next.1",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^0.3.28",
+		"sveltekit-superforms": "^2.20.0",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.9",
@@ -41,7 +45,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
-		"vitest": "^2.0.4"
+		"vitest": "^2.0.4",
+		"zod": "^3.23.8"
 	},
 	"dependencies": {
 		"@sentry/browser": "^8.37.1",
