--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
+		"audit": "better-npm-audit audit",
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "vite preview --host",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint . && prettier --check .",
@@ -15,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
@@ -50,6 +52,7 @@
 	},
 	"dependencies": {
 		"@sentry/browser": "^8.37.1",
+		"better-npm-audit": "^3.11.0",
 		"lucide-svelte": "^0.454.0",
 		"mode-watcher": "^0.4.1"
 	}
