--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@sentry/browser": "^8.37.1",
 		"better-npm-audit": "^3.11.0",
 		"lucide-svelte": "^0.454.0",
-		"mode-watcher": "^0.4.1"
+		"mode-watcher": "^0.4.1",
+		"svelte-codemirror-editor": "^1.4.1"
 	}
 }
