--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
 		"better-npm-audit": "^3.11.0",
 		"lucide-svelte": "^0.454.0",
 		"mode-watcher": "^0.4.1",
-		"svelte-codemirror-editor": "^1.4.1"
+		"svelte-codemirror-editor": "^1.4.1",
+		"svelvet": "^10.0.2",
+		"uuid": "^11.0.3"
 	}
 }
